# ariac_gazebo_lidar

./: README.md  ariac_clustering.rviz
groundplane_segmentation/: CMakeLists.txt  README.md  package.xml
groundplane_segmentation/config/: params.yaml
groundplane_segmentation/include/: groundplane_segmentation.h
groundplane_segmentation/launch/: groundplane_seg.launch
groundplane_segmentation/rviz/: ground_seg.rviz
groundplane_segmentation/src/: groundplane_segmentation.cpp
pointcloud_object_clustering/: CMakeLists.txt  README.md  cluster.rviz  package.xml
pointcloud_object_clustering/config/: params.yaml
pointcloud_object_clustering/include/: pcl_cluster_obj.h
pointcloud_object_clustering/launch/: pcl_object_clustering.launch
pointcloud_object_clustering/src/: pcl_cluster_obj.cpp
simulation/ariac_tb3/: CMakeLists.txt  README.md  package.xml
simulation/ariac_tb3/launch/: turtlebot3_D435_ariac.launch  turtlebot3_ariac.launch
simulation/ariac_tb3/models/stand/: model.sdf
simulation/ariac_tb3/rviz/: tb3_d435.rviz
simulation/ariac_tb3/urdf/: turtlebot3_burger_D435.urdf.xacro  turtlebot3_waffle_pi_D435.urdf.xacro
simulation/ariac_tb3/worlds/: ariac.world
simulation/realsense2_description/urdf/: _d435.urdf.xacro
